# bible

./: .gitignore  MANIFEST.in  README.md  Readme.md  app.py  day.md  main.py  pyproject.toml  requirements.txt  scrap.ipynb  scraping.ipynb  setup.py  todos.txt
.github/workflows/: python-app.yml
config/: settings.py
data/exports/: bible_study_20250123_103357.md  bible_study_20250123_110130.md  bible_study_20250123_111617.md  bible_study_20250123_112426.md  bible_study_20250123_112437.md  bible_study_20250123_112841.md  bible_study_20250123_135355.md
data/verses/: verse_response_20250121_233602.json  verse_response_20250123_092836.json  verse_response_20250123_094423.json  verse_response_20250123_100837.json  verse_response_20250123_103305.json  verse_response_20250123_104624.json  verse_response_20250123_105954.json  verse_response_20250123_111033.json  verse_response_20250123_111513.json  verse_response_20250123_112416.json  verse_response_20250123_112815.json  verse_response_20250123_131042.json  verse_response_20250308_212548.json
scripture-ai-agent/: .env  README.md  requirements.txt
scripture-ai-agent/src/: main.py
scripture-ai-agent/src/services/: __init__.py  gpt_service.py  serper_service.py
scripture-ai-agent/src/utils/: helpers.py
scripture_ai_agent.egg-info/: PKG-INFO  SOURCES.txt
src/: __init__.py  main.py
src/agent/: __init__.py  bible_agent.py  search_agent.py
src/config/: settings.py
src/models/: verse.py
src/services/: __init__.py  gpt_service.py  serper_service.py
src/utils/: helpers.py
utils/formatters/: console_formatter.py
(+7 files in other folders)
