[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bible"
version = "0.1.0"
description = "Bible Study AI Agent"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "colorama>=0.4.6"
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
bible = "main:main"